# CodeGenie

./: README.ja.md  README.md  pyproject.toml
codegenie/: __init__.py  core.py
